<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>com.pas</groupId>
  <artifactId>slomfin</artifactId>
  <packaging>war</packaging>
  <version>2.0.3</version>
  
  <name>slomfin Maven Webapp</name>
  <url>http://maven.apache.org</url>
  
  <parent>
	<groupId>org.springframework.boot</groupId>
	<artifactId>spring-boot-starter-parent</artifactId>
	<version>3.4.1</version>
	<relativePath/> <!-- lookup parent from repository -->
  </parent>
  
  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>    
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  
  <dependencies>   
	
 	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter</artifactId>
	</dependency>
	
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-web</artifactId>		
	</dependency>
	
	<dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-security</artifactId>
	</dependency>
	
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-actuator</artifactId>
	</dependency>
	
	<dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-validation</artifactId>
	</dependency>	
	
	<dependency>
	    <groupId>com.google.guava</groupId>
	    <artifactId>guava</artifactId>
	</dependency>
	
    <dependency>
	    <groupId>software.amazon.awssdk</groupId>
	    <artifactId>dynamodb</artifactId>
	    <version>2.23.12</version>
	</dependency>
	
	<dependency>
	    <groupId>software.amazon.awssdk</groupId>
	    <artifactId>dynamodb-enhanced</artifactId>
	    <version>2.23.12</version>
	</dependency>
	   
    <dependency>
        <groupId>software.amazon.awssdk</groupId>
        <artifactId>url-connection-client</artifactId>
        <version>2.23.12</version>
    </dependency>
   
    <dependency>
        <groupId>com.amazonaws</groupId>
        <artifactId>DynamoDBLocal</artifactId>
        <version>2.2.1</version>
        <exclusions>
	      	<exclusion>
	      		<groupId>org.eclipse.jetty.toolchain</groupId>
	      		<artifactId>jetty-jakarta-servlet-api</artifactId>
	      	</exclusion>
	    </exclusions>
    </dependency>
    
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-core</artifactId>
	</dependency>

	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-annotations</artifactId>
	</dependency>
	
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	</dependency>

	<dependency>
	    <groupId>jakarta.validation</groupId>
	    <artifactId>jakarta.validation-api</artifactId>
	</dependency>
   	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-api</artifactId>
	    </dependency>
	
	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-core</artifactId>
	</dependency>
	
	<dependency>
	    <groupId>com.github.librepdf</groupId>
	    <artifactId>openpdf</artifactId>
	    <version>2.0.3</version>
	</dependency>

	<dependency>
	    <groupId>commons-fileupload</groupId>
	    <artifactId>commons-fileupload</artifactId>
	    <version>1.3.3</version>
	</dependency>
	
	<dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.6</version>
    </dependency>
   
   <dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>8.0.20</version>
	</dependency>
	
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-jdbc</artifactId>
	</dependency>
		
	<dependency>
	    <groupId>org.glassfish</groupId>
    	<artifactId>jakarta.faces</artifactId>
    	<version>4.1.1</version>
	</dependency>
	 
	<dependency>
		<groupId>org.primefaces</groupId>
    	<artifactId>primefaces</artifactId>
    	<version>14.0.10</version>
    	<classifier>jakarta</classifier>
	</dependency>
	
	<dependency>
	    <groupId>org.primefaces.themes</groupId>
        <artifactId>all-themes</artifactId>
        <version>1.0.11</version>
	</dependency>
	
	<dependency>
	    <groupId>org.jboss.weld.servlet</groupId>
		<artifactId>weld-servlet-core</artifactId>
		<version>6.0.0.Beta4</version>
		<exclusions>
	      	<exclusion>
	      		<groupId>jakarta.el</groupId>
	      		<artifactId>jakarta.el-api</artifactId>
	      	</exclusion>		      	
	    </exclusions>
	</dependency>

	<dependency>
	    <groupId>jakarta.enterprise</groupId>
	    <artifactId>jakarta.enterprise.cdi-api</artifactId>
	    <version>4.1.0</version>
	    <exclusions>
	      	<exclusion>
	      		<groupId>jakarta.el</groupId>
	      		<artifactId>jakarta.el-api</artifactId>
	      	</exclusion>		      	
	    </exclusions>
	</dependency>
	
	<dependency>
	    <groupId>jakarta.enterprise</groupId>
	    <artifactId>jakarta.enterprise.cdi-el-api</artifactId>
	    <version>4.1.0</version>
	    <exclusions>
	      	<exclusion>
	      		<groupId>jakarta.el</groupId>
	      		<artifactId>jakarta.el-api</artifactId>
	      	</exclusion>		      	
	    </exclusions>
	</dependency>
 	
	<dependency>
	    <groupId>com.sun.mail</groupId>
	    <artifactId>javax.mail</artifactId>
	    <version>1.5.6</version>
	</dependency> 
	
	<dependency>
	    <groupId>net.aksingh</groupId>
	    <artifactId>owm-japis</artifactId>
	    <version>2.5.3.0</version>
	</dependency>
	
	<!-- PROVIDED SCOPE - Server Runtime libraries -->
    <dependency>
        <groupId>jakarta.servlet</groupId>
    	<artifactId>jakarta.servlet-api</artifactId>
    	<scope>provided</scope>
    </dependency>
    
    <dependency>
        <groupId>jakarta.el</groupId>
    	<artifactId>jakarta.el-api</artifactId>
    	<version>6.0.0-M1</version>
    	<scope>provided</scope>
    </dependency>
              
  </dependencies>
  
  <build>
	  
    <finalName>nfl</finalName>
     
    <plugins>
		
       <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
             <source>17</source>
             <target>17</target>
          </configuration>
       </plugin>
       
       <plugin>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-maven-plugin</artifactId>
	   </plugin>
	  	   
	   <!--Get Native SQLite4Java dependencies-->
       <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
                <execution>
                    <id>copy</id>
                    <phase>test-compile</phase>
                    <goals>
                        <goal>copy-dependencies</goal>
                    </goals>
                    <configuration>
                        <includeScope>test</includeScope>
                        <includeTypes>so,dll,dylib</includeTypes>
                        <outputDirectory>${project.basedir}/native-libs</outputDirectory>
                    </configuration>
                </execution>
            </executions>
       </plugin>
		
    </plugins>
    
     <resources>
	      <resource>
	          <directory>src/main/webapp</directory>
	          <targetPath>META-INF/resources</targetPath>
	          <includes>
	               <include>**/**</include>
	          </includes>
	          <filtering>false</filtering>
	      </resource>
	      <resource>
	            <directory>src/main/resources</directory>
	      </resource>
   </resources>
    
   </build>
  
</project>
